[package]
name = "abi2human"
version = "1.0.2"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Zero-dependency CLI tool to convert Ethereum ABI JSON to human-readable format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/abi2human-rs"
homepage = "https://github.com/yourusername/abi2human-rs"
documentation = "https://docs.rs/abi2human"
readme = "README.md"
keywords = ["ethereum", "abi", "converter", "cli", "blockchain"]
categories = ["command-line-utilities", "development-tools", "cryptography::cryptocurrencies"]
exclude = ["tests/*", ".github/*", "examples/*"]

[[bin]]
name = "abi2human"
path = "src/main.rs"

[dependencies]
